<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="218dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="50dp"
        android:inputType="textCapSentences"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:fontFamily="@font/days_one"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toTopOf="@+id/btnagregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="325dp"
                android:layout_height="58dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/Hint_nombre"
                android:inputType="textCapSentences"
                app:layout_constraintBottom_toTopOf="@+id/edtRaza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtRaza"
                android:layout_width="325dp"
                android:layout_height="58dp"
                android:layout_marginBottom="40dp"
                android:ems="10"
                android:hint="@string/Hint_raza"
                android:inputType="textCapSentences"
                app:layout_constraintBottom_toTopOf="@+id/edtCiudad"
                app:layout_constraintEnd_toEndOf="@+id/edtNombre"
                app:layout_constraintStart_toStartOf="@+id/edtNombre"
                app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

            <EditText
                android:id="@+id/edtCiudad"
                android:layout_width="325dp"
                android:layout_height="58dp"
                android:layout_marginBottom="42dp"
                android:ems="10"
                android:hint="@string/Hint_ciudad"
                android:inputType="textCapSentences"
                app:layout_constraintBottom_toTopOf="@+id/edtDireccion"
                app:layout_constraintEnd_toEndOf="@+id/edtRaza"
                app:layout_constraintStart_toStartOf="@+id/edtRaza"
                app:layout_constraintTop_toBottomOf="@+id/edtRaza" />

            <EditText
                android:id="@+id/edtDireccion"
                android:layout_width="325dp"
                android:layout_height="58dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:ems="10"
                android:hint="@string/Hint_direccion"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtCiudad" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnagregar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="75dp"
        android:background="@color/colorPrimary"
        android:text="@string/texto_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnlista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/btnlista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:background="@color/colorPrimary"
        android:text="@string/Texto_listado"
        app:layout_constraintBottom_toBottomOf="@+id/btnagregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnagregar"
        app:layout_constraintTop_toTopOf="@+id/btnagregar" />
</androidx.constraintlayout.widget.ConstraintLayout>