<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"

            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:baselineAligned="false">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="204dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:baselineAligned="false"
                        android:text="@string/Texto_nombre"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/idnombre"
                        android:layout_width="411dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:baselineAligned="false"
                        android:text="Fifi"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_weight="1"
                    android:baselineAligned="false">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="126dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:baselineAligned="false"
                        android:text="@string/Texto_raza"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/idRaza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:baselineAligned="false"
                        android:text="Labrador"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="9dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="374dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:text="@string/texto_ultima"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/iddireccion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:baselineAligned="false"
                            android:text="calle 76 #26b2-06"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/idciudad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Barranquilla"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>